Fix tx event emission when aborted